--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
         <style src="estilos/estilos.css"></style>
     </head>
         <body>
+            <div class="navegador">
+                <nav>
+                    <header id="header">Rockxy</header>
+                    <nav class="barra de navegación">
+                        <li>
+                            <a href="Inicio">Inicio</a>
+                            <a href="Catalogo">Catalogo</a>
+                        </li>
+                    </nav>
+                </nav>
+            </div>
         </body>
 </html>
 
