--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
     </head>
         <body>
             <div class="navegador">
-                <nav>
-                    <header id="header">Rockxy</header>
-                    <nav class="barra de navegación">
-                        <li>
-                            <a href="Inicio">Inicio</a>
-                            <a href="Catalogo">Catalogo</a>
-                        </li>
-                    </nav>
+                <header id="header">Rockxy</header>
+                <nav class="barra de navegación">
+                    <li>
+                        <a href="Inicio">Inicio</a>
+                        <a href="Nosotros">nosotros</a>
+                        <a href="Catalogo">Catalogo</a>
+                        <a href="menu">Menu</a>
+                        <a href="calificanos">calificanos</a>
+                    </li>
                 </nav>
             </div>
         </body>
-</html>
+        </html>
+            
+                
 
 
 
