--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Carrito de compras</title>
+        <h1>Carrito de compras</h1>
     </head>
 </html>
