--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -2,5 +2,28 @@
 <html>
     <head>
         <h1>Carrito de compras</h1>
+        <link rel="stylesheet" href="estilos/carritoCompras.css">
+        <script src="funciones/carritoCompras.js"></script>
     </head>
+
+     <div class="navegador">
+        <header id="header">
+            <h1>Rockxy</h1>
+            <p>Bar de Rock</p>
+        </header>
+        <nav class="barraNavegacion">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html#categorias">Categorías</a></li>
+                <li><a href="carritoCompras.html">Carrito de Compras</a></li>
+                <li><a href="index.html#equipo">Nuestro Equipo</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <body>
+
+        <h1 id="no_elementos">No tienes ningún elemento en el carrito</h1>
+        
+    </body>
 </html>
