cambios en html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Navegación -->
     <div class="navegador">
         <header id="header">
+            <img src="" alt=""> <!--Icono del restaurante-->
             <h1>Rockxy</h1>
             <p>Bar de Rock</p>
         </header>
@@ -141,13 +142,15 @@
                     <div class="miembro">
                         <h3>Juan Davis Sanchez Roldán</h3>
                         <p>Código: 340321</p>
-                        <p>Desarrollador Frontend</p>
+                        <p></p>
+                        <img src="" alt=""><!---Imagenes de cada desarrollador-->
                     </div>
                     
                     <div class="miembro">
                         <h3>Felipe Franco Jaime</h3>
                         <p>Código: 272153</p>
-                        <p>Desarrollador Frontend</p>
+                        <p></p>
+                        <img src="" alt="""><!---Imagenes de cada desarrollador-->
                     </div>
                 </div>
             </div>
