--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -3,7 +3,7 @@
     <head>
         <h1>Carrito de compras</h1>
         <link rel="stylesheet" href="estilos/carritoCompras.css">
-        <script src="funciones/carritoCompras.js"></script>
+        <script src="funciones/funciones.js"></script>
     </head>
 
      <div class="navegador">
