edicion de funciones

--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -45,7 +45,7 @@
                 <div class="carrito-resumen">
                     <p>Total a pagar:</p>
                     <p class="total-monto">$<span id="total-carrito">0.00</span></p>
-                    <button class="btn-finalizar" onclick="enviarAlServidor()">Finalizar Compra</button>
+                    <button class="btn-finalizar" onclick="enviarformulario()">Finalizar Compra</button>
                 </div>
             </div>
         </div>
