--- a/index.html
+++ b/index.html
@@ -409,15 +409,15 @@
                 <h2>Nuestro Equipo Desarrollador</h2>
                 <div class="miembros-equipo">
                     <div class="miembro">
-                        <h3>Juan Davis Sanchez Roldán</h3>
+                        <h3>Juan David Sanchez Roldán</h3>
                         <p>Código: 340321</p>
-                        <p>Frontend Developer & Rock Enthusiast</p>
+                        <p>Frontend Developer</p>
                     </div>
                     
                     <div class="miembro">
                         <h3>Felipe Franco Jaime</h3>
                         <p>Código: 272153</p>
-                        <p>Backend Developer & Music Lover</p>
+                        <p>Backend Developer</p>
                     </div>
                 </div>
             </div>
