Pedidos enviados a un nuevo servidor, falta hacerle mejoras, implementa un doPost en el googleSheets y pon la url en urlPedidos, eso deberia funcionar si quieres te paso el codigo del doPost

--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -68,7 +68,7 @@
                 
                 <div class="form-group">
                     <label for="direccion-cliente">Dirección *</label>
-                    <textarea id="direccion-cliente" required placeholder="Ej: Calle 123 #45-67, Bogotá" rows="3"></textarea>
+                    <textarea id="direccion-cliente" required placeholder="Ej: mesa #" rows="3"></textarea>
                 </div>
                 
                 <div class="form-actions">
