--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="funciones/funciones.js"></script>
 </head>
 <body>
+    <!--Carga productos-->
+     <div id="spinner-overlay" class="spinner-overlay">
+        <div class="spinner-container">
+            <div class="spinner"></div>
+            <p class="spinner-text" id="spinner-text">Cargando...</p>
+        </div>
+    </div>
     <!-- Navegación -->
     <div class="navegador">
         <header id="header">
