--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -8,6 +8,13 @@
     <script src="funciones/funciones.js"></script>
 </head>
 <body>
+    <!--Carga-->
+     <div id="spinner-overlay" class="spinner-overlay">
+        <div class="spinner-container">
+            <div class="spinner"></div>
+            <p class="spinner-text" id="spinner-text">Enviando pedido...</p>
+        </div>
+    </div>
     <div class="navegador">
         <header id="header">
             <h1>Rockxy</h1>
@@ -74,6 +81,7 @@
                 <div class="form-actions">
                     <button type="button" class="btn-cancelar" onclick="cerrarModalCliente()">Cancelar</button>
                     <button type="submit" class="btn-confirmar">Confirmar Pedido</button>
+
                 </div>
             </form>
         </div>
