--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -74,7 +74,7 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="direccion-cliente">Dirección *</label>
+                    <label for="direccion-cliente">Mesa Direccion*</label>
                     <textarea id="direccion-cliente" required placeholder="Ej: mesa #" rows="3"></textarea>
                 </div>
                 
