--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -74,8 +74,8 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="direccion-cliente">Mesa Direccion*</label>
-                    <textarea id="direccion-cliente" required placeholder="Ej: mesa #" rows="3"></textarea>
+                    <label for="direccion-cliente">Dirección *</label>
+                    <textarea id="direccion-cliente" required placeholder="Ej: calle 3#3-94" rows="3"></textarea>
                 </div>
                 
                 <div class="form-actions">
