feat: Implement user authentication and registration with JWT, including login and registration forms

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                     <span id="contador-carrito" class="contador-carrito" style="display: none;">0</span>
                 </a></li>
                 <li><a href="#equipo">Nuestro Equipo</a></li>
+                <li><a href="login.html">👤 iniciar sesion</a></li>
+                
             </ul>
         </nav>
-    </div>
-
+    </div
     <main>
         <!-- Página de inicio -->
         <section id="inicio">
