feat: Add login link to the navigation and update API URL in funciones.js

--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -26,6 +26,7 @@
                 <li><a href="index.html#categorias">Categorías</a></li>
                 <li><a href="carritoCompras.html">Carrito de Compras</a></li>
                 <li><a href="index.html#equipo">Nuestro Equipo</a></li>
+                <li><a href="login.html">👤 iniciar sesion</a></li>
             </ul>
         </nav>
     </div>
